--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -1,5 +1,37 @@
 #topics_top_title
 {
     width: 100%;
-    height: 25px;
+    font-height: 24px;
+}
+
+#articles_titles
+{
+    width: 300px;
+    float: left;
+}
+
+#articles_titles li a
+{
+    display: block;
+    width: 100%;
+}
+
+#articles_titles li a h1 /* コース名 */
+{
+
+}
+
+#articles_titles li a span /* 教員名 */
+{
+    float: right;
+}
+
+#articles_titles li a h3 /* キャッチコピー */
+{
+
+}
+
+.article_intro{
+    width: 400px;
+    height: 250px;
 }
