topics_branches css js関係
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@5625 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -16,22 +16,27 @@
     width: 100%;
 }
 
-#articles_titles li a h1 /* コース名 */
+#articles_title li a h1 /* コース名 */
 {
 
 }
 
-#articles_titles li a span /* 教員名 */
+#articles_title li a span /* 教員名 */
 {
     float: right;
 }
 
-#articles_titles li a h3 /* キャッチコピー */
-{
+#articles_title li a h3 /* キャッチコピー */
+{1v
 
 }
 
-.article_intro{
+#article_intro{
     width: 400px;
     height: 250px;
+}
+
+#intro1,#intro2,#intro3,#intro4,#intro5,#intro6
+{
+    display: none;
 }
