g_text (用語解説など1ページずつ作るページの本文)の dl のスタイル調整.
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@5628 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/2010.css
+++ b/css/2010.css
@@ -1263,7 +1263,7 @@ span.red{
 	padding-left: 20px;
 }
 
-.g_text h3 {
+.g_text h3, dt {
 	font-size: 13px;
 	font-weight: bold;
 	background-image: url(../images/common/header3_box.png);
