topics no.3 test css
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@5649 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -8,6 +8,9 @@
 {
     width: 300px;
     float: left;
+    border-style: dotted;
+    border-width: 1px;
+    border-color: orange;
 }
 
 #articles_titles li a
@@ -27,7 +30,7 @@
 }
 
 #articles_title li a h3 /* キャッチコピー */
-{1v
+{
 
 }
 
