topics no.3 test css
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@5650 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -1,3 +1,8 @@
+ul
+{
+    list-style-type: none;
+}
+
 #topics_top_title
 {
     width: 100%;
@@ -26,6 +31,7 @@
 
 #articles_title li a span /* ¶µ°÷Ì¾ */
 {
+    clear: left;
     float: right;
 }
 
