topics no.3 test css
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@5651 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -24,9 +24,9 @@ ul
     width: 100%;
 }
 
-#articles_title li a h1 /* コース名 */
+#articles_title li a h2 /* コース名 */
 {
-
+    clear: right;
 }
 
 #articles_title li a span /* 教員名 */
@@ -40,7 +40,8 @@ ul
 
 }
 
-#article_intro{
+#articles_intro{
+    float: left;
     width: 400px;
     height: 250px;
 }
