topics no.3 test css
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@5653 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -11,8 +11,9 @@ ul
 
 #articles_title
 {
-    width: 300px;
+    width: 250px;
     float: left;
+    padding: 0;
     border-style: dotted;
     border-width: 1px;
     border-color: orange;
@@ -35,18 +36,18 @@ ul
     float: right;
 }
 
-#articles_title li a h3 /* キャッチコピー */
-{
-
-}
-
 #articles_intro{
     float: left;
-    width: 400px;
+    width: 300px;
     height: 250px;
 }
 
 #intro1,#intro2,#intro3,#intro4,#intro5,#intro6
 {
     display: none;
+}
+
+#articles_intro li a h2 /* キャッチコピー */
+{
+
 }
