topics no.3 test css
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@5657 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -1,3 +1,8 @@
+#contents
+{
+    width: 1200px;
+}
+
 ul
 {
     list-style-type: none;
@@ -11,7 +16,7 @@ ul
 
 #articles_title
 {
-    width: 250px;
+    width: 400px;
     float: left;
     padding: 0;
     border-style: dotted;
@@ -38,7 +43,7 @@ ul
 
 #articles_intro{
     float: left;
-    width: 300px;
+    width: 800px;
     height: 250px;
 }
 
