--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -1,6 +1,10 @@
 #contents
 {
-    width: 1200px;
+    width: 875px;
+    margin-left: 30px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: blue;
 }
 
 ul
