--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -1,6 +1,6 @@
 #contents
 {
-    width: 875px;
+    width: 875px !important ;
     margin-left: 30px;
     border-style: solid;
     border-width: 1px;
