--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -17,8 +17,9 @@ ul
 
 #articles_title
 {
-    width: 350px;
+    width: 330px;
     float: left;
+    margin: 10px;
     padding: 0;
     border-style: dotted;
     border-width: 1px;
@@ -44,9 +45,10 @@ ul
 
 #articles_intro{
     float: left;
-    width: 500px;
+    width: 480px;
     height: 250px;
     padding: 0;
+    margin: 10px;
 }
 
 #intro1,#intro2,#intro3,#intro4,#intro5,#intro6
