--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -51,6 +51,7 @@ ul
     height: 250px;
     padding: 0;
     margin: 10px;
+    margin-bottom: 3em;
 }
 
 #intro1,#intro2,#intro3,#intro4,#intro5,#intro6
