留学生の声
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@5730 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/student_testimonials.css
+++ b/css/student_testimonials.css
@@ -17,13 +17,38 @@ body{
 }
 
 /* ビデオが読み込まれる茶色の枠 */
-#top_video{
+#interview_video_frame{
   width: 317px;
   height: 379px;
-  margin: 0px 0px 0px 0px;
+  margin: 20px 0px 0px 0px;
   padding: 0px 0px 0px 0px;
   color: #FFFFFF; /* #E74AAE だと思われるが後で差し替え。body に設定か */
   background-color: #4C3521; /* だと思われるが後で確認 */
+}
+
+/* ビデオのタイトル */
+#interview_title{
+  height: 100px;
+  margin: 23px 0px 0px 5px;
+  font-family: sans-serif;
+  font-size: 20px;
+  color: #E74AAE;
+}
+
+#interview_title:first-letter{
+  float: left;
+  width: 40px;
+  height: 30px;
+  margin: -18px 5px 0px 0px;
+  padding: 10px 0px 0px 0px;
+  font-size: 40px;
+  color: #FFFFFF;
+  text-align: center;
+  background-color: #E74AAE;
+}
+
+#interview_video{
+  margin: -85px 0px 0px 0px;
 }
 
 /* 動画リストの最も外側の枠 */
