--- a/css/2010.css
+++ b/css/2010.css
@@ -715,7 +715,7 @@ td.topics_date{
 	background-image: url(../images/common/header3_box.png);
 	background-repeat: no-repeat;
 	padding-left: 15px;
-	padding-right: 0px; /*  ‘Ω∏*/
+	padding-right: 15px; 
 	padding-top: 0px;
 	margin-left: -145px;
   	margin-right: 0;
