留学生の声
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@5784 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/student_testimonials.css
+++ b/css/student_testimonials.css
@@ -64,6 +64,27 @@ body{
   height: 70px
 }
 
+.tub_button_left{
+  float: left;
+  width: 243px; 
+  height: 70px;
+  border:solid 1px #000000;　
+}
+
+.tub_button_center{
+  float: left;
+  width: 243px; 
+  height: 70px;
+  border:solid 1px #000000;　
+}
+
+.tub_button_right{
+  float: left;
+  width: 243px; 
+  height: 70px;
+  border:solid 1px #000000;　
+}
+
 /* リスト左側のテーマ別の柱 */
 .list_header{
   float: left;
