留学生の声
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@5787 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/student_testimonials.css
+++ b/css/student_testimonials.css
@@ -66,23 +66,23 @@ body{
 
 .tub_button_left{
   float: left;
-  width: 240px; 
+  width: 235px; 
   height: 70px;
-  border:solid 1px #000000;　
+  border:solid 1px #E74AAE; /* と思われるピンク色（要確認）*/
 }
 
 .tub_button_center{
   float: left;
-  width: 240px; 
+  width: 235px; 
   height: 70px;
-  border:solid 1px #000000;　
+  border:solid 1px #E74AAE; /* と思われるピンク色（要確認）*/
 }
 
 .tub_button_right{
   float: left;
-  width: 240px; 
+  width: 235px; 
   height: 70px;
-  border:solid 1px #000000;　
+  border:solid 1px #E74AAE; /* と思われるピンク色（要確認）*/
 }
 
 /* リスト左側のテーマ別の柱 */
