留学生の声
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@5821 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/student_testimonials.css
+++ b/css/student_testimonials.css
@@ -66,7 +66,7 @@ body{
 
 .tub_button_left{
   float: left;
-
+  width: 152px; 
   height: 70px;
   margin: 0px 0px 0px 20px;
   border: solid 1px #E74AAE; /* と思われるピンク色（要確認）*/
@@ -74,7 +74,7 @@ body{
 
 .tub_button_center{
   float: left;
-
+  width: 152px; 
   height: 70px;
   margin: 0px 0px 0px 140px;
   border: solid 1px #E74AAE; /* と思われるピンク色（要確認）*/
@@ -82,7 +82,7 @@ body{
 
 .tub_button_right{
   float: left;
-
+  width: 152px; 
   height: 70px;
   margin: 0px 0px 0px 120px;
   border: solid 1px #E74AAE; /* と思われるピンク色（要確認）*/
