--- a/css/student_testimonials.css
+++ b/css/student_testimonials.css
@@ -69,7 +69,7 @@ body{
   width: 152px; 
   height: 70px;
   margin: 0px 0px 0px 20px;
-  border: solid 1px #E74AAE; /* と思われるピンク色（要確認）*/
+/*  border: solid 1px #E74AAE; /* と思われるピンク色（要確認）*/
 }
 
 .tub_button_center{
@@ -77,7 +77,7 @@ body{
   width: 152px; 
   height: 70px;
   margin: 0px 0px 0px 100px;
-  border: solid 1px #E74AAE; /* と思われるピンク色（要確認）*/
+/*  border: solid 1px #E74AAE; /* と思われるピンク色（要確認）*/
 }
 
 .tub_button_right{
@@ -85,7 +85,7 @@ body{
   width: 152px; 
   height: 70px;
   margin: 0px 0px 0px 100px;
-  border: solid 1px #E74AAE; /* と思われるピンク色（要確認）*/
+/*  border: solid 1px #E74AAE; /* と思われるピンク色（要確認）*/
 }
 
 /* リスト左側のテーマ別の柱 */
