留学生の声
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@5827 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/student_testimonials.css
+++ b/css/student_testimonials.css
@@ -69,7 +69,7 @@ body{
   width: 152px; 
   height: 70px;
   margin: 0px 0px 0px 30px;
-/*  border: solid 3px #E74AAE; /* と思われるピンク色（要確認）*/
+  border: solid 3px #E74AAE; /* と思われるピンク色（要確認）*/
 }
 
 .tub_button_center{
