留学生の声
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@5831 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/student_testimonials.css
+++ b/css/student_testimonials.css
@@ -69,6 +69,7 @@ body{
   width: 152px; 
   height: 70px;
   margin: 0px 0px 0px 30px;
+  padding: 0px 5px 0px 5px;
   border: solid 4px #E74AAE; /* と思われるピンク色（要確認）*/
 }
 
