--- a/css/student_testimonials.css
+++ b/css/student_testimonials.css
@@ -77,7 +77,7 @@ body{
   width: 152px; 
   height: 70px;
   margin: 0px 0px 0px 80px;
-  border: solid 4px #E74AAE; /* と思われるピンク色（要確認）*/
+  border: solid 4px #FFFFFF; /* と思われるピンク色（要確認）*/
 }
 
 .tub_button_right{
