--- a/css/student_testimonials.css
+++ b/css/student_testimonials.css
@@ -69,7 +69,7 @@ body{
   width: 152px; 
   height: 70px;
   margin: 0px 0px 0px 30px;
-  border: solid 4px #F7EEF3; /* と思われるピンク色（要確認）*/
+  border: solid 4px #F7EEF3;
 }
 
 .tub_button_center{
@@ -77,7 +77,7 @@ body{
   width: 152px; 
   height: 70px;
   margin: 0px 0px 0px 80px;
-  border: solid 4px #FF99FF; /* と思われるピンク色（要確認）*/
+  border: solid 4px #F7EEF3;
 }
 
 .tub_button_right{
@@ -85,7 +85,7 @@ body{
   width: 152px; 
   height: 70px;
   margin: 0px 0px 0px 90px;
-  border: solid 4px #FF99CC; /* と思われるピンク色（要確認）*/
+  border: solid 4px #F7EEF3;
 }
 
 /* リスト左側のテーマ別の柱 */
