--- a/css/2010.css
+++ b/css/2010.css
@@ -666,6 +666,7 @@ td.topics_date{
 }
 
 .e_text ul, .e_text ol, .e_text dl, .e_text table{
+    padding: 0em;
 	margin-bottom: 0em;
 	margin-top: 1.5em;
 	float:left;
