--- a/css/2010.css
+++ b/css/2010.css
@@ -228,8 +228,8 @@ a:hover{
 }
 
 	.main_back_adachi{
-		background-image: url(../images/common/staff.png);
-		background-repeat: no-repeat;
+		/*background-image: url(../images/common/staff.png);
+		background-repeat: no-repeat; */
 		position: absolute;
 		top: 10px; 
 		left: 1030px;
