topics NO.3 p.info css
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@5864 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -62,6 +62,15 @@ ul
 
 }
 
+p.info
+{
+    width: 10em;
+    border-style: solid;
+    border-width: 1px;
+    float: right;
+    clear: both;
+}
+
 #articles_detail
 {
     clear: both;
