topics NO.3 p.info css
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@5865 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -64,9 +64,9 @@ ul
 
 p.info
 {
-    width: 10em;
-    border-style: solid;
-    border-width: 1px;
+    width: 12em;
+    padding: 1em:
+    bockground-color: gold;
     float: right;
     clear: both;
 }
