--- a/css/2010.css
+++ b/css/2010.css
@@ -664,16 +664,20 @@ td.topics_date{
   margin: 0px;
 }
 
-.e_text ul, .e_text ol, .e_text dl, .e_text table{
+.e_text ul, .e_text ol, .e_text dl{
     padding: 0em;
 	margin-bottom: 0em;
-	margin-top: 1.5em;
-	float:left;
+	margin-top: 0em;
+	/*float:left;*/
 	/*  border: 1px solid blue; */
 }
 
 .e_text dt {
   margin-top: 0.5em;
+}
+
+.e_text table{
+  margin-top: 1.5em;
 }
 
 .e_text p{
@@ -712,12 +716,12 @@ td.topics_date{
 	background-image: url(../images/common/header3_box.png);
 	background-repeat: no-repeat;
 	padding-left: 15px;
-	padding-right: 15px;
+	padding-right: 0px;
 	padding-top: 0px;
 	margin-left: -145px;
   	margin-right: 0;
   	margin-top: 1.5em; 
-  width: 110px; 
+  width: 120px; 
    float: left;
    clear: left; 
 /*	border: 1px solid green; */
