--- a/css/2010.css
+++ b/css/2010.css
@@ -382,7 +382,9 @@ body:first-of-type #contents{
 		}
 
 /* 以下トップページ関連 */
-.inline{
+.inline
+
+{
 	display: inline-block;
 }
 /* IE対策 */
@@ -1197,6 +1199,14 @@ table.sorttable{
 	width: 300px;
 	height: 200px;
 }
+
+#dep_txt_en{
+        position: relative;
+        top: 90px; left: 35px;
+        width: 600px;
+        height: 200px;
+}
+
 
 a#more{
   display: block;
