留学生の声のページ切り替えタブを修正.
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@5921 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/student_testimonials.css
+++ b/css/student_testimonials.css
@@ -63,11 +63,15 @@ body{
   width: 152px; 
   height: 70px;
   border: solid 4px #F7EEF3;
-  margin: 0px 40px;
+  margin: 0px
 }
 
 .tub_button:hover {
   border: solid 4px #E74AAE;
+}
+
+#tub_button_center {
+  margin: 0px 112px;
 }
 
 /* リスト左側のテーマ別の柱 */
