--- a/css/2010.css
+++ b/css/2010.css
@@ -788,7 +788,7 @@ td.topics_date{
 .navi{
 	float: left; 
 	list-style-type: none;
-	width: 220px
+	width: 220px;
 	margin: 0px;
 	padding-left: 2em;
 	padding-right: 2em;
