--- a/css/googleSearch.css
+++ b/css/googleSearch.css
@@ -7,8 +7,8 @@
     border-color: #000000;
   }
   input.gsc-search-button {
-    border-color: #ffcc00;
-    background-color: #ff9900;
+    border-color: #c0c0ff;
+    background-color: #e0e0e0;
   }
   .gsc-tabHeader.gsc-tabhInactive {
     border-color: #A9DA92;
