検索ボタンのデザイン変更
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6090 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/googleSearch.css
+++ b/css/googleSearch.css
@@ -7,8 +7,10 @@
     border-color: #000000;
   }
   input.gsc-search-button {
-    border-color: #e0e0e0;
+    border-color: #000000;
     background-color: #c0c0ff;
+height: 27.5px;
+
   }
   .gsc-tabHeader.gsc-tabhInactive {
     border-color: #A9DA92;
