--- a/css/googleSearch.css
+++ b/css/googleSearch.css
@@ -7,9 +7,8 @@
     border-color: #000000;
   }
   input.gsc-search-button {
-    border-color: #000000;
-    background-color: #c0c0ff;
-height: 27.5px;
+    background-color: #dddddd;
+height: 26px;
 
   }
   .gsc-tabHeader.gsc-tabhInactive {
