--- a/css/googleSearch.css
+++ b/css/googleSearch.css
@@ -7,7 +7,8 @@
     border-color: #000000;
   }
   input.gsc-search-button {
-    background-color: #dddddd;
+border-color:#dddddd;    
+background-color: #dddddd;
 height: 26px;
 
   }
