検索ボタンのデザイン変更
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6096 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/googleSearch.css
+++ b/css/googleSearch.css
@@ -4,12 +4,12 @@
     background-color: #cc0000;
   }
   input.gsc-input {
-    border-color: #white;
+    border-color: #ffffff;
   }
   input.gsc-search-button {
 border-color:#cccccc;    
 background-color: #cccccc;
-height: 27px;
+height: 28px;
 
   }
   .gsc-tabHeader.gsc-tabhInactive {
