--- a/css/2010.css
+++ b/css/2010.css
@@ -1193,12 +1193,21 @@ table.sorttable{
 	display : none;
 }
 
+#dep_info_head_dean{
+        position: relative;
+        top: 50px; left:550px; 
+        width: 400px;
+        height: 200px;
+}
+
 #dep_txt{
 	position: relative;
 	top: 90px; left: 35px;
 	width: 300px;
 	height: 200px;
 }
+
+
 
 #dep_txt_en{
         position: relative;
