--- a/css/contents.css
+++ b/css/contents.css
@@ -607,6 +607,16 @@ div.dept_info_head_dean {
   padding-right: 20px;
 }
 
+div.dept_info_head_dean_en {
+        width: 400px;
+        max-height: 400px;
+        color: #444444;
+        font-weight: bold;
+        overflow: hidden;
+        text-align: right;
+  padding-right: 20px;
+}
+
 div.dept_info_head_contents_with_dean{
 	padding-right:20px;
 	max-height:54px;
