--- a/css/2010.css
+++ b/css/2010.css
@@ -1200,7 +1200,7 @@ table.sorttable{
 
 #dep_info_dean_text{
         position: relative;
-        left: 300px;
+        right: 10px;
 }
 
 #dep_txt{
