--- a/css/2010.css
+++ b/css/2010.css
@@ -1,4 +1,4 @@
-6c6c6c6cbody{
+6c6c6c6c6c6cbody{
 	margin: 0;
 	padding: 0;
 
@@ -1222,8 +1222,8 @@ table.sorttable{
 
 #dep_txt_en{
         position: relative;
-        top: 80px; left: 35px;
-        width: 640px;
+        top: 90px; left: 35px;
+        width: 600px;
         height: 200px;
 }
 
